--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "concurrently \"npm:dev-server\" \"npm:dev-client\"",
   "dev-server": "cross-env NODE_ENV=development tsx server/index.ts",
   "dev-client": "npm run dev --prefix client",
-    "build": "vite build && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
+    "build": "vite build",
     "start": "NODE_ENV=production node dist/index.js",
     "check": "tsc",
     "db:push": "drizzle-kit push"
